--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <input type="file" id="upload" multiple accept="image/*" style="display: none;">
   <br>
 
-  <div id="links">💡 Link ảnh sẽ hiện ở đây sau khi upload...</div>
+  <div id="links"></div>
   <button id="copyBtn">📋 Copy tất cả link</button>
 
   <script>
